--- a/contracts/package.json
+++ b/contracts/package.json
@@ -13,12 +13,17 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/node": "^8.0.29",
+    "@types/express": "^4.17.13",
+    "@types/node": "^8.10.66",
     "ts-node": "3.3.0",
     "typescript": "3.3.3333"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.6.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.13.0",
+    "helmet": "^4.6.0",
     "pg": "^8.7.1",
     "typeorm": "0.2.39",
     "typeorm-sequence": "^1.1.3"
