--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "date-fns": "^2.25.0",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
